new post: disclaimer, added ga beacon, remove irrelevant images from theme

--- a/_posts/2014-09-25-let's-go.md
+++ b/_posts/2014-09-25-let's-go.md
@@ -3,7 +3,7 @@ layout: post
 title: Let's Go
 description: "You need to start with first post, don't you? This is the one."
 modified: 2014-09-25
-tags: [sample post]
+tags: [personal]
 image:
   feature: abstract-3.jpg
   credit: dargadgetz
