--- a/_posts/2014-09-25-let's-go.md
+++ b/_posts/2014-09-25-let's-go.md
@@ -5,9 +5,7 @@ description: "You need to start with first post, don't you? This is the one."
 modified: 2014-09-25
 tags: [personal]
 image:
-  feature: abstract-3.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  feature: logo.jpg
 comments: true
 share: true
 ---
