--- a/_posts/2014-09-25-let's-go.md
+++ b/_posts/2014-09-25-let's-go.md
@@ -2,7 +2,7 @@
 layout: post
 title: Let's Go
 description: "You need to start with first post, don't you? This is the one."
-modified: 2014-09-25
+created: 2014-09-25
 tags: [personal]
 image:
   feature: logo.jpg
