more on the topic

--- a/_posts/2014-10-11-hate-bugs.md
+++ b/_posts/2014-10-11-hate-bugs.md
@@ -3,7 +3,7 @@ layout: post
 title: Can tester dislike bugs?
 description: "How I approach testing and can a tester dislike bugs?"
 created: 2014-10-11
-tags: [personal, testing, rewarding]
+tags: [personal, testing, tester, rewarding]
 image:
   feature: logo.jpg
 comments: true
@@ -14,12 +14,14 @@ Can tester dislike bugs? Interesting question, isn't it? One would say tester's 
 
 I dislike bugs, even further, I cringe when I find bug. 
 
-Not all bugs, not on every stage of development. There are bugs I like finding, especially found during system testing or while testing complex business processes and coming up with various edge cases implementation of tested system doesn't really answer.
+Not all bugs, not during every stage of development. There are bugs I like finding, especially these found during system testing or while testing complex business processes and coming up with various edge cases implementation of tested system doesn't really support.
 
-But the majority of bugs I hate. Bugs I find in mature applications, released to support & maintenance. Performance issues. Render issues. Broken links. Typos. More. These I can't stand. 
+But the majority of bugs I hate. Bugs I find in mature applications, released to support & maintenance or advanced in development. bugs that should have been caught earlier. Performance issues. Render issues. Broken links. Typos. More. These I can't stand. 
 
-How a tester hate finding bugs? I like thinking about myself as a quality watcher. My role is not as to find bugs as to prevent them from happening. Especially these trivial ones, which can be spotted fairly quick in the development process just by applying standards, best practices and using available tools.
+How a tester can hate finding bugs? I like thinking about myself as a quality watcher. My role is not as to find bugs as to prevent them from happening. Especially these trivial ones, which can be spotted fairly quick in the development process just by applying standards, best practices and using available tools. 
 
-Rewarding tester by the number of bugs he found really doesn't work for me. My goal is to make sure the number is as close to 0 as possible. Please don't reward my failures. Do the opposite. Check the application and see how it performs? Are there any obvious issues? Are you struggle while using it? No? Reward! Not only the tester, but the whole team. Review problems and leave the team to improve otherwise.
+Don't get me wrong, I know bugs exist and will continue to exist no matter what you do. I don't believe you can find and fix all the bugs. I believe though users expectation change, and what a while back was considered as a bug now is considered as a lost user. And you as a tester are also an user, a special one, the one who can change the way application is developed, prevent classes of issues from happening. Refuse to do the bad work. Once spotted a type of bug, that's essential to keep user interested in your application, not only fix it, but prevent another similar from happening. Invest in tools and automation.
 
-Your organisation may have Development and Support & Maintenance as separate departments. Make sure they speak to each other, maintain a feedback loop between Support & Development. Shorten the delivery cycle. Implement users feedback facilities. Everything to get more on the quality of your application you either develop or developed a while back. Use the feedback to reward or improve.
+Rewarding tester by the number of bugs he found really doesn't work for me. My goal is to make sure the number is as close to 0 as possible. Please don't reward my failures. Do the opposite. Check the application and see how it performs? Are there any obvious issues? Are you struggle while using it? No? Reward! Not only the tester, but the whole team. Application doesn't meet expectations? Review problems with the team and let them improve.
+
+Your organisation may have separate Development and Support & Maintenance departments. Make sure they speak to each other. Maintain a feedback loop between these departments. Shorten the delivery cycle. Implement users feedback facilities. Everything to get more on the quality of your application you either develop or developed a while back. Use the feedback to reward and improve.
