--- a/_posts/2014-10-11-hate-bugs.md
+++ b/_posts/2014-10-11-hate-bugs.md
@@ -12,7 +12,9 @@ share: true
 
 Can tester dislike bugs? Interesting question, isn't it? One would say tester's role is to find bugs, so he should like them. This is not the case with me.
 
-I dislike bugs, even further, I cringe when I find bug. 
+I dislike bugs, even further, I cringe when I find bug. I'm even afraid of finding particular ones.
+
+![Tester afraid of Bugs]({{ site.url }}/assets/img/afraid-bugs.jpg)
 
 Not all bugs, not during every stage of development. There are bugs I like finding, especially these found during system testing or while testing complex business processes and coming up with various edge cases implementation of tested system doesn't really support.
 
