--- a/_posts/2014-10-27-GTAC2014.md
+++ b/_posts/2014-10-27-GTAC2014.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Gogole Test Automation Conference 2014
+title: Google Test Automation Conference 2014
 description: "GTAC2014"
 created: 2014-10-27
 tags: [testing, automation, google, conference]
