--- a/_posts/2014-10-27-GTAC2014.md
+++ b/_posts/2014-10-27-GTAC2014.md
@@ -10,6 +10,8 @@ comments: true
 share: true
 ---
 
-Google Test Automation Conference edition 2014 starts tomorrow. Though it's in USA, Google will provide live feed on Youtube for you to watch, more details [here](https://developers.google.com/google-test-automation-conference/2014/stream "GTAC2014 Live Stream"). The conference itself looks really packed. Lot of speakers from Google, Facebook, Twitter, Netflix. Check out the [schedule](https://developers.google.com/google-test-automation-conference/2014/schedule "GTAC2014 Schedule").
+Google Test Automation Conference edition 2014 starts tomorrow. Though it's in USA, Google will provide live feed on Youtube for you to watch, more details [here](https://developers.google.com/google-test-automation-conference/2014/stream "GTAC2014 Live Stream"). 
+
+The conference itself looks really packed. Lot of speakers from Google, Facebook, Twitter, Netflix. Check out the [schedule](https://developers.google.com/google-test-automation-conference/2014/schedule "GTAC2014 Schedule").
 
 If you are from Poland and not afraid of staying up all night, or at least waking up very early morning, download the [calendar]({{ site.url }}/assets/cal/GTAC2014.ics) I created for you.
