--- a/_posts/2014-10-28-GTAC2014-Day1.md
+++ b/_posts/2014-10-28-GTAC2014-Day1.md
@@ -14,8 +14,8 @@ Google published [screencast](https://www.youtube.com/watch?v=6ZvCU0dht50 "GTAC2
 
 Not interested in the whole 4 hours session? I put together a list of presentation and links to Youtube,
 
-* [CATJS: Applications That Test Themselves](https://www.youtube.com/watch?v=6ZvCU0dht50#t=1660, "CATJS: Applications That Test Themselves"), where Ran Snir & Lior Reuven from HP talk about mobile test automation
-* [Scalable Continuous Integration - Using Open Source](https://www.youtube.com/watch?v=6ZvCU0dht50#t=2656, "Scalable Continuous Integration - Using Open Source"), where Vishal Arora from Dropbox talks about Continuous Integration, tools, issues, and available cloud solutions
-* [I Don't Test Often... But When I Do, I Test in Production](https://www.youtube.com/watch?v=6ZvCU0dht50#t=3712, "I Don't Test Often... But When I Do, I Test in Production"), where Gareth Bowles from Netflix talks about culture, processes, and the overall approach to quality assurance in Netflix
-* [The Importance of Automated Testing on Real and Virtual Mobile Devices](https://www.youtube.com/watch?v=6ZvCU0dht50#t=7919, "The Importance of Automated Testing on Real and Virtual Mobile Devices"), where Jay Srinivasan & Manish Lachwani from Google talk about their approach to mobile development, test automation, data mining
-* [Test Automation on an Infrared Set-top Box](https://www.youtube.com/watch?v=6ZvCU0dht50#t=11533, "Test Automation on an Infrared Set-top Box"), where Olivier Etienne from Orange talks about homemade automation framework and automation process targeted for TV kits
+* [CATJS: Applications That Test Themselves](https://www.youtube.com/watch?v=6ZvCU0dht50#t=1660 "CATJS: Applications That Test Themselves"), where Ran Snir & Lior Reuven from HP talk about mobile test automation
+* [Scalable Continuous Integration - Using Open Source](https://www.youtube.com/watch?v=6ZvCU0dht50#t=2656 "Scalable Continuous Integration - Using Open Source"), where Vishal Arora from Dropbox talks about Continuous Integration, tools, issues, and available cloud solutions
+* [I Don't Test Often... But When I Do, I Test in Production](https://www.youtube.com/watch?v=6ZvCU0dht50#t=3712 "I Don't Test Often... But When I Do, I Test in Production"), where Gareth Bowles from Netflix talks about culture, processes, and the overall approach to quality assurance in Netflix
+* [The Importance of Automated Testing on Real and Virtual Mobile Devices](https://www.youtube.com/watch?v=6ZvCU0dht50#t=7919 "The Importance of Automated Testing on Real and Virtual Mobile Devices"), where Jay Srinivasan & Manish Lachwani from Google talk about their approach to mobile development, test automation, data mining
+* [Test Automation on an Infrared Set-top Box](https://www.youtube.com/watch?v=6ZvCU0dht50#t=11533 "Test Automation on an Infrared Set-top Box"), where Olivier Etienne from Orange talks about homemade automation framework and automation process targeted for TV kits
