second day of GTAC 2014

--- a/_posts/2014-10-28-GTAC2014-Day1.md
+++ b/_posts/2014-10-28-GTAC2014-Day1.md
@@ -14,8 +14,13 @@ Google published [screencast](https://www.youtube.com/watch?v=6ZvCU0dht50 "GTAC2
 
 Not interested in the whole 4 hours session? I put together a list of presentation and links to Youtube,
 
-* [CATJS: Applications That Test Themselves](https://www.youtube.com/watch?v=6ZvCU0dht50#t=1660 "CATJS: Applications That Test Themselves"), where Ran Snir & Lior Reuven from HP talk about mobile test automation
-* [Scalable Continuous Integration - Using Open Source](https://www.youtube.com/watch?v=6ZvCU0dht50#t=2656 "Scalable Continuous Integration - Using Open Source"), where Vishal Arora from Dropbox talks about Continuous Integration, tools, issues, and available cloud solutions
-* [I Don't Test Often... But When I Do, I Test in Production](https://www.youtube.com/watch?v=6ZvCU0dht50#t=3712 "I Don't Test Often... But When I Do, I Test in Production"), where Gareth Bowles from Netflix talks about culture, processes, and the overall approach to quality assurance in Netflix
-* [The Importance of Automated Testing on Real and Virtual Mobile Devices](https://www.youtube.com/watch?v=6ZvCU0dht50#t=7919 "The Importance of Automated Testing on Real and Virtual Mobile Devices"), where Jay Srinivasan & Manish Lachwani from Google talk about their approach to mobile development, test automation, data mining
-* [Test Automation on an Infrared Set-top Box](https://www.youtube.com/watch?v=6ZvCU0dht50#t=11533 "Test Automation on an Infrared Set-top Box"), where Olivier Etienne from Orange talks about homemade automation framework and automation process targeted for TV kits
+* [Move Fast & Don't Break Things](https://www.youtube.com/watch?v=6ZvCU0dht50#t=1469 "Move Fast & Don't Break Things"), Ankit Mehta from Google
+* [Automation for a Better Web](https://www.youtube.com/watch?v=6ZvCU0dht50#t=5663 "Automation for a Better Web"), James Graham from Mozilla
+* [Make Chrome the best mobile browser](https://www.youtube.com/watch?v=6ZvCU0dht50#t=8221 "Make Chrome the best mobile browser"), Karin Lundberg from Google
+* [A Test Automation Language for Behavioral Models](https://www.youtube.com/watch?v=6ZvCU0dht50#t=10797 "A Test Automation Language for Behavioral Models"), Nan Li from Medidata Solutions
+* [Test coverage at Google](https://www.youtube.com/watch?v=6ZvCU0dht50#t=11693 "Test coverage at Google"), Andrei Chirila from Google
+* [CATJS: Applications That Test Themselves](https://www.youtube.com/watch?v=6ZvCU0dht50#t=16213 "CATJS: Applications That Test Themselves"), Ran Snir & Lior Reuven from HP
+* [Scalable Continuous Integration - Using Open Source](https://www.youtube.com/watch?v=6ZvCU0dht50#t=17209 "Scalable Continuous Integration - Using Open Source"), Vishal Arora from Dropbox
+* [I Don't Test Often... But When I Do, I Test in Production](https://www.youtube.com/watch?v=6ZvCU0dht50#t=18265 "I Don't Test Often... But When I Do, I Test in Production"), Gareth Bowles from Netflix
+* [The Importance of Automated Testing on Real and Virtual Mobile Devices](https://www.youtube.com/watch?v=6ZvCU0dht50#t=22472 "The Importance of Automated Testing on Real and Virtual Mobile Devices"), Jay Srinivasan & Manish Lachwani from Google
+* [Test Automation on an Infrared Set-top Box](https://www.youtube.com/watch?v=6ZvCU0dht50#t=26086 "Test Automation on an Infrared Set-top Box"), Olivier Etienne from Orange
