--- a/_posts/2014-10-28-GTAC2014-Day1.md
+++ b/_posts/2014-10-28-GTAC2014-Day1.md
@@ -12,7 +12,7 @@ share: true
 
 Google published [screencast](https://www.youtube.com/watch?v=6ZvCU0dht50 "GTAC2014 Day 1 Screencast") from the first day of Google Test Automation Conference 2014. 
 
-Not interested in the whole 4 hours session? I put together a list of presentation and links to Youtube,
+Not interested in watching the whole 8 hours session? I put together a list of presentation and links to Youtube,
 
 * [Move Fast & Don't Break Things](https://www.youtube.com/watch?v=6ZvCU0dht50#t=1469 "Move Fast & Don't Break Things"), Ankit Mehta from Google
 * [Automation for a Better Web](https://www.youtube.com/watch?v=6ZvCU0dht50#t=5663 "Automation for a Better Web"), James Graham from Mozilla
