replace screencast with video

--- a/_posts/2014-10-28-GTAC2014-Day1.md
+++ b/_posts/2014-10-28-GTAC2014-Day1.md
@@ -10,7 +10,7 @@ comments: true
 share: true
 ---
 
-Google published [screencast](https://www.youtube.com/watch?v=6ZvCU0dht50 "GTAC2014 Day 1 Screencast") from the first day of Google Test Automation Conference 2014. 
+Google published [video](https://www.youtube.com/watch?v=6ZvCU0dht50 "GTAC2014 Day 1 Video") from the first day of Google Test Automation Conference 2014. 
 
 Not interested in watching the whole 8 hours session? I put together a list of presentation and links to Youtube,
 
