--- a/_posts/2014-10-29-GTAC2014-Day2.md
+++ b/_posts/2014-10-29-GTAC2014-Day2.md
@@ -10,7 +10,7 @@ comments: true
 share: true
 ---
 
-Google published [screencast](https://www.youtube.com/watch?v=Stjc80e15-c "GTAC2014 Day 2 Screencast") from the second day of Google Test Automation Conference 2014. 
+Google published [video](https://www.youtube.com/watch?v=Stjc80e15-c "GTAC2014 Day 2 Video") from the second day of Google Test Automation Conference 2014. 
 
 As with first day, here are the presentations,
 
